# Py175-Network-Applications

./: .stylelintrc.json  README.md  counter_server.py  echo_server.py  package.json  roll_dice.py
Flask/: hello.py
book_viewer_starter/: app.py
book_viewer_starter/static/stylesheets/: book_viewer.css
book_viewer_starter/templates/: chapter.html  home.html  index.html  search.html
file_based_CMS/: app.py  pyproject.toml
file_based_CMS/cms/: utils.py
file_based_CMS/cms/data/: about.md  changes.txt  users.yaml
file_based_CMS/static/stylesheets/: cms.css
file_based_CMS/tests/: test_app.py
new_example/example_app/: app.py  pyproject.toml
new_example/example_app/tests/: test_app.py
todo_starter/: .render.yaml  app.py
todo_starter/templates/: layout.html  lists.html
todo_starter/todos/: utils.py
users/: app.py  pyproject.toml
users/data/: users.yaml
users/static/stylesheets/: book_viewer.css
users/templates/: home.html  layout.html  user.html
